<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageSV"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/music_icon_splashscreen"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@+id/song_duration"
        android:layout_toEndOf="@id/imageSV"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/song_name"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:layout_toStartOf="@+id/song_duration"
        android:layout_toEndOf="@id/imageSV"
        android:text="@string/artist_name"
        android:textColor="@color/grey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/song_duration"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/song_duration"
        android:textColor="@color/black" />

</RelativeLayout>