<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/shuffleBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn_shuffle"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_shuffle"
                android:text="@string/btn_shuffle"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/favoritesBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" android:contentDescription="@string/btn_favorites"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_favorite"
                android:text="@string/btn_favorites"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/playlistBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn_playlist"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_playlist_play"
                android:text="@string/btn_playlist"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/total_songs"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_total_songs"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/song_rec_view"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>